--- a/figures/expected_steps.tex
+++ b/figures/expected_steps.tex
@@ -1,25 +1,25 @@
 \begin{tabular}{llrrrr}
 \toprule
-     &   &         mean &          std &        min &           max \\
-metric & num\_exposures &              &              &            &               \\
+     &   &       mean &       std &        min &        max \\
+metric & num\_exposures &            &           &            &            \\
 \midrule
-mse & 1 &  3474.073362 &  3853.248159 &  23.744126 &  14656.771315 \\
-     & 2 &  2260.923828 &  3015.843608 &   4.384672 &  14841.404244 \\
-     & 3 &  1574.867993 &  2421.942911 &   3.304258 &  13782.966796 \\
-     & 4 &  1118.562032 &  1785.761718 &   6.910735 &  11778.551164 \\
-     & 5 &   793.472097 &  1377.999026 &   7.585378 &  10904.052095 \\
-     & 6 &   583.296697 &  1024.861731 &   2.558349 &   7497.380370 \\
-psnr & 1 &    16.393416 &     6.452302 &   6.470420 &     34.375242 \\
-     & 2 &    18.783955 &     6.685045 &   6.416054 &     41.711433 \\
-     & 3 &    20.557789 &     6.581760 &   6.737377 &     42.940064 \\
-     & 4 &    21.782207 &     6.341851 &   7.419885 &     39.735561 \\
-     & 5 &    23.639801 &     6.345882 &   7.754924 &     39.331031 \\
-     & 6 &    24.625003 &     6.128339 &   9.381708 &     44.051205 \\
-ssim & 1 &     0.718822 &     0.272602 &   0.030667 &      0.987464 \\
-     & 2 &     0.799575 &     0.234686 &   0.039838 &      0.993982 \\
-     & 3 &     0.850721 &     0.201178 &   0.028980 &      0.996080 \\
-     & 4 &     0.891684 &     0.153854 &   0.111053 &      0.997728 \\
-     & 5 &     0.922599 &     0.118242 &   0.190204 &      0.996507 \\
-     & 6 &     0.938665 &     0.103346 &   0.319563 &      0.998082 \\
+psnr & 1 &  17.187851 &  6.185793 &   6.626784 &  37.891969 \\
+     & 2 &  19.712297 &  6.172646 &   7.572540 &  43.072692 \\
+     & 3 &  21.476652 &  6.305920 &   7.793329 &  47.198247 \\
+     & 4 &  22.632521 &  5.700862 &   8.176034 &  43.837129 \\
+     & 5 &  23.356312 &  5.310289 &  10.197740 &  38.509581 \\
+     & 6 &  24.786620 &  5.566497 &   9.453821 &  43.425802 \\
+rmse & 1 &   0.347613 &  0.240430 &   0.034070 &   0.971166 \\
+     & 2 &   0.264579 &  0.203258 &   0.031379 &   0.952795 \\
+     & 3 &   0.210025 &  0.155340 &   0.019841 &   0.890679 \\
+     & 4 &   0.183829 &  0.147248 &   0.030569 &   0.877275 \\
+     & 5 &   0.162259 &  0.114795 &   0.029799 &   0.894293 \\
+     & 6 &   0.140014 &  0.110220 &   0.013865 &   0.828455 \\
+ssim & 1 &   0.726783 &  0.270832 &   0.048572 &   0.995223 \\
+     & 2 &   0.817442 &  0.221264 &   0.046884 &   0.994728 \\
+     & 3 &   0.882102 &  0.146429 &   0.090045 &   0.996261 \\
+     & 4 &   0.905273 &  0.137677 &   0.115656 &   0.994937 \\
+     & 5 &   0.927231 &  0.096982 &   0.096243 &   0.997794 \\
+     & 6 &   0.945648 &  0.083323 &   0.136547 &   0.997554 \\
 \bottomrule
 \end{tabular}
