--- a/dhdrnet/notebooks/Untitled.ipynb
+++ b/dhdrnet/notebooks/Untitled.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -62,35 +71,35 @@
        "      <td>c1b1_20150312_141022_171</td>\n",
        "      <td>rmse</td>\n",
        "      <td>-3.00</td>\n",
-       "      <td>0.813147</td>\n",
+       "      <td>0.814936</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>c1b1_20150312_141022_171</td>\n",
        "      <td>psnr</td>\n",
        "      <td>-3.00</td>\n",
-       "      <td>6.753222</td>\n",
+       "      <td>6.552593</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>c1b1_20150312_141022_171</td>\n",
        "      <td>ssim</td>\n",
        "      <td>-3.00</td>\n",
-       "      <td>0.242182</td>\n",
+       "      <td>0.232993</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>c1b1_20150312_141022_171</td>\n",
-       "      <td>rmse</td>\n",
-       "      <td>-2.75</td>\n",
-       "      <td>0.814743</td>\n",
+       "      <td>perceptual</td>\n",
+       "      <td>-3.00</td>\n",
+       "      <td>0.443095</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>c1b1_20150312_141022_171</td>\n",
-       "      <td>psnr</td>\n",
+       "      <td>rmse</td>\n",
        "      <td>-2.75</td>\n",
-       "      <td>6.736195</td>\n",
+       "      <td>0.816721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -100,93 +109,88 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>4KK2_20150829_170525_488</td>\n",
-       "      <td>psnr</td>\n",
+       "      <th>139</th>\n",
+       "      <td>5066_20160510_193314_625</td>\n",
+       "      <td>perceptual</td>\n",
        "      <td>5.75</td>\n",
-       "      <td>14.610017</td>\n",
+       "      <td>0.091892</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>4KK2_20150829_170525_488</td>\n",
-       "      <td>ssim</td>\n",
-       "      <td>5.75</td>\n",
-       "      <td>0.835229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>4KK2_20150829_170525_488</td>\n",
+       "      <th>140</th>\n",
+       "      <td>5066_20160510_193314_625</td>\n",
        "      <td>rmse</td>\n",
        "      <td>6.00</td>\n",
-       "      <td>0.318225</td>\n",
+       "      <td>0.258454</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>106</th>\n",
-       "      <td>4KK2_20150829_170525_488</td>\n",
+       "      <th>141</th>\n",
+       "      <td>5066_20160510_193314_625</td>\n",
        "      <td>psnr</td>\n",
        "      <td>6.00</td>\n",
-       "      <td>13.930960</td>\n",
+       "      <td>17.143010</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>4KK2_20150829_170525_488</td>\n",
+       "      <th>142</th>\n",
+       "      <td>5066_20160510_193314_625</td>\n",
        "      <td>ssim</td>\n",
        "      <td>6.00</td>\n",
-       "      <td>0.814626</td>\n",
+       "      <td>0.845857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>5066_20160510_193314_625</td>\n",
+       "      <td>perceptual</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>0.113717</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>312660 rows × 4 columns</p>\n",
+       "<p>416880 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         name metric    ev      score\n",
-       "0    c1b1_20150312_141022_171   rmse -3.00   0.813147\n",
-       "1    c1b1_20150312_141022_171   psnr -3.00   6.753222\n",
-       "2    c1b1_20150312_141022_171   ssim -3.00   0.242182\n",
-       "3    c1b1_20150312_141022_171   rmse -2.75   0.814743\n",
-       "4    c1b1_20150312_141022_171   psnr -2.75   6.736195\n",
-       "..                        ...    ...   ...        ...\n",
-       "103  4KK2_20150829_170525_488   psnr  5.75  14.610017\n",
-       "104  4KK2_20150829_170525_488   ssim  5.75   0.835229\n",
-       "105  4KK2_20150829_170525_488   rmse  6.00   0.318225\n",
-       "106  4KK2_20150829_170525_488   psnr  6.00  13.930960\n",
-       "107  4KK2_20150829_170525_488   ssim  6.00   0.814626\n",
+       "                         name      metric    ev      score\n",
+       "0    c1b1_20150312_141022_171        rmse -3.00   0.814936\n",
+       "1    c1b1_20150312_141022_171        psnr -3.00   6.552593\n",
+       "2    c1b1_20150312_141022_171        ssim -3.00   0.232993\n",
+       "3    c1b1_20150312_141022_171  perceptual -3.00   0.443095\n",
+       "4    c1b1_20150312_141022_171        rmse -2.75   0.816721\n",
+       "..                        ...         ...   ...        ...\n",
+       "139  5066_20160510_193314_625  perceptual  5.75   0.091892\n",
+       "140  5066_20160510_193314_625        rmse  6.00   0.258454\n",
+       "141  5066_20160510_193314_625        psnr  6.00  17.143010\n",
+       "142  5066_20160510_193314_625        ssim  6.00   0.845857\n",
+       "143  5066_20160510_193314_625  perceptual  6.00   0.113717\n",
        "\n",
-       "[312660 rows x 4 columns]"
+       "[416880 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import re\n",
+    "\n",
     "df = (\n",
     "    pd.read_csv(\n",
-    "        ROOT_DIR / \"precomputed_data\" / \"store_test_2020-10-06.csv\", index_col=0\n",
+    "        ROOT_DIR / \"precomputed_data\" / \"store_current.csv\", index_col=0\n",
     "    )\n",
     "    .drop(columns=\"ev1\")\n",
     "    .rename(columns={\"ev2\": \"ev\"})\n",
     ")\n",
+    "\n",
+    "p = re.compile(r\"([0-9.]+)\")\n",
+    "mask = df[\"metric\"] == \"perceptual\"\n",
+    "df.loc[mask, \"score\"] = df.loc[mask, \"score\"].transform(lambda s: p.search(s).group(0))\n",
+    "df[\"score\"] = pd.to_numeric(df[\"score\"])\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grouped = df.groupby(\"metric\")\n",
-    "df_rmse = grouped.get_group(\"rmse\").drop(columns=\"metric\")\n",
-    "df_psnr = grouped.get_group(\"psnr\").drop(columns=\"metric\")\n",
-    "df_ssim = grouped.get_group(\"ssim\").drop(columns=\"metric\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -210,176 +214,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>ev</th>\n",
-       "      <th>score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>c1b1_20150312_141022_171</td>\n",
-       "      <td>-3.00</td>\n",
-       "      <td>0.813147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>c1b1_20150312_141022_171</td>\n",
-       "      <td>-2.75</td>\n",
-       "      <td>0.814743</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>c1b1_20150312_141022_171</td>\n",
-       "      <td>-2.50</td>\n",
-       "      <td>0.817379</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>c1b1_20150312_141022_171</td>\n",
-       "      <td>-2.25</td>\n",
-       "      <td>0.819293</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>c1b1_20150312_141022_171</td>\n",
-       "      <td>-2.00</td>\n",
-       "      <td>0.822532</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>93</th>\n",
-       "      <td>4KK2_20150829_170525_488</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>0.194159</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>4KK2_20150829_170525_488</td>\n",
-       "      <td>5.25</td>\n",
-       "      <td>0.229136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>4KK2_20150829_170525_488</td>\n",
-       "      <td>5.50</td>\n",
-       "      <td>0.263132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>102</th>\n",
-       "      <td>4KK2_20150829_170525_488</td>\n",
-       "      <td>5.75</td>\n",
-       "      <td>0.294294</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>4KK2_20150829_170525_488</td>\n",
-       "      <td>6.00</td>\n",
-       "      <td>0.318225</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>104220 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         name    ev     score\n",
-       "0    c1b1_20150312_141022_171 -3.00  0.813147\n",
-       "3    c1b1_20150312_141022_171 -2.75  0.814743\n",
-       "6    c1b1_20150312_141022_171 -2.50  0.817379\n",
-       "9    c1b1_20150312_141022_171 -2.25  0.819293\n",
-       "12   c1b1_20150312_141022_171 -2.00  0.822532\n",
-       "..                        ...   ...       ...\n",
-       "93   4KK2_20150829_170525_488  5.00  0.194159\n",
-       "96   4KK2_20150829_170525_488  5.25  0.229136\n",
-       "99   4KK2_20150829_170525_488  5.50  0.263132\n",
-       "102  4KK2_20150829_170525_488  5.75  0.294294\n",
-       "105  4KK2_20150829_170525_488  6.00  0.318225\n",
-       "\n",
-       "[104220 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_rmse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "name                      metric\n",
-       "0006_20160721_163256_525  psnr      52\n",
-       "                          rmse      84\n",
-       "                          ssim      11\n",
-       "0006_20160721_172953_515  psnr       7\n",
-       "                          rmse      84\n",
-       "                                    ..\n",
-       "c483_20150901_211301_691  rmse      72\n",
-       "                          ssim      11\n",
-       "c483_20150901_211303_855  psnr      10\n",
-       "                          rmse      69\n",
-       "                          ssim      14\n",
-       "Name: score, Length: 8685, dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfg = df.groupby([\"name\", \"metric\"])\n",
-    "ind_minscore = dfg.idxmin()[\"score\"]\n",
-    "ind_minscore"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
        "      <th>mean</th>\n",
        "      <th>std</th>\n",
        "      <th>min</th>\n",
-       "      <th>25%</th>\n",
-       "      <th>50%</th>\n",
-       "      <th>75%</th>\n",
        "      <th>max</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -388,71 +225,83 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>perceptual</th>\n",
+       "      <td>0.183580</td>\n",
+       "      <td>0.146395</td>\n",
+       "      <td>0.001431</td>\n",
+       "      <td>0.853125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>psnr</th>\n",
-       "      <td>2895.0</td>\n",
-       "      <td>11.401944</td>\n",
-       "      <td>2.976953</td>\n",
-       "      <td>5.981377</td>\n",
-       "      <td>8.948695</td>\n",
-       "      <td>10.805977</td>\n",
-       "      <td>13.435982</td>\n",
-       "      <td>21.903930</td>\n",
+       "      <td>16.431658</td>\n",
+       "      <td>6.014727</td>\n",
+       "      <td>5.739877</td>\n",
+       "      <td>47.463439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rmse</th>\n",
-       "      <td>2895.0</td>\n",
-       "      <td>0.078918</td>\n",
-       "      <td>0.030414</td>\n",
-       "      <td>0.010718</td>\n",
-       "      <td>0.056968</td>\n",
-       "      <td>0.072008</td>\n",
-       "      <td>0.093795</td>\n",
-       "      <td>0.236306</td>\n",
+       "      <td>0.354830</td>\n",
+       "      <td>0.235042</td>\n",
+       "      <td>0.007798</td>\n",
+       "      <td>0.991846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ssim</th>\n",
-       "      <td>2895.0</td>\n",
-       "      <td>0.517660</td>\n",
-       "      <td>0.264114</td>\n",
-       "      <td>0.014725</td>\n",
-       "      <td>0.296821</td>\n",
-       "      <td>0.522967</td>\n",
-       "      <td>0.743614</td>\n",
-       "      <td>0.970097</td>\n",
+       "      <td>0.724803</td>\n",
+       "      <td>0.267346</td>\n",
+       "      <td>0.015141</td>\n",
+       "      <td>0.997507</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         count       mean       std       min       25%        50%        75%  \\\n",
-       "metric                                                                          \n",
-       "psnr    2895.0  11.401944  2.976953  5.981377  8.948695  10.805977  13.435982   \n",
-       "rmse    2895.0   0.078918  0.030414  0.010718  0.056968   0.072008   0.093795   \n",
-       "ssim    2895.0   0.517660  0.264114  0.014725  0.296821   0.522967   0.743614   \n",
-       "\n",
-       "              max  \n",
-       "metric             \n",
-       "psnr    21.903930  \n",
-       "rmse     0.236306  \n",
-       "ssim     0.970097  "
+       "                 mean       std       min        max\n",
+       "metric                                              \n",
+       "perceptual   0.183580  0.146395  0.001431   0.853125\n",
+       "psnr        16.431658  6.014727  5.739877  47.463439\n",
+       "rmse         0.354830  0.235042  0.007798   0.991846\n",
+       "ssim         0.724803  0.267346  0.015141   0.997507"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfg.min()[\"score\"].groupby(\"metric\").describe()"
+    "grouped = df.set_index(\"name\").groupby([\"metric\"])\n",
+    "grouped.describe()[\"score\"][[\"mean\", \"std\", \"min\", \"max\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "metric\n",
+       "perceptual    0.001431\n",
+       "psnr          5.739877\n",
+       "rmse          0.007798\n",
+       "ssim          0.015141\n",
+       "Name: score, dtype: float64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped.min()[\"score\"]"
    ]
   },
   {
@@ -705,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
